aspnetcore/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aspnetcorek8s-service
  name: aspnetcorek8s-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aspnetcorek8s
